sumo/tests/netgen/junction_types/errors/junction_type_actuated_tls/testsuite.netgen
# test for a grid network
grid

# test for a spider network
spider

# test for a random network
random



